estoy anadiendo estilos

--- a/index.html
+++ b/index.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>primer proyecto</title>
+    <link rel="stylesheet"  type="text/css" href="style.css">
 </head>
 <body>
+    <div class="genesis">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquid fugiat modi inventore rerum molestiae similique dolorem officiis cumque, perferendis corrupti neque adipisci earum corporis nobis magnam! Voluptatem, porro aut?</p>
+    
+    </div>
 
     <script src="Script.js" ></script>
-    <h1>hola mundo</h1>
-    <p>estas es una demostracion</p>
-<<<<<<< HEAD
-
-
-    <p>estamos en apriestos</p>
-=======
-    <h2>hola soy daniel</h2>
-    
->>>>>>> ede89578e3e576f1dcbdbcb730ee1809b0665d5a
 </body>
 </html>
